--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,13 @@ matrix:
         - _PHP: php70
 
     - os: osx
+      osx_image: xcode7.3
+      language: generic
+      env:
+        - _OSX=10.11
+        - _PHP: php71
+
+    - os: osx
       osx_image: xcode7.1
       language: generic
       env:
@@ -45,6 +52,13 @@ matrix:
         - _PHP: php70
 
     - os: osx
+      osx_image: xcode7.1
+      language: generic
+      env:
+        - _OSX=10.10
+        - _PHP: php71
+
+    - os: osx
       osx_image: beta-xcode6.2
       language: generic
       env:
@@ -57,6 +71,13 @@ matrix:
       env:
         - _OSX=10.9
         - _PHP: php70
+
+    - os: osx
+      osx_image: beta-xcode6.2
+      language: generic
+      env:
+        - _OSX=10.9
+        - _PHP: php71
 
   allow_failures:
     - php: nightly
